# ultimate-python-template

./: .gitignore  .sourcery.yaml  config.yaml  env_test.py  main.py  pyproject.toml  ruff.toml
config/logging_configs/: 6-queued-filtered.json  config.json
output/logs/: my_app.log.jsonl
pytest-of-unknown/pytest-78/test_settings_loads_with_gener0/: config.yaml
pytest-of-unknown/pytest-79/test_settings_loads_with_gener0/: config.yaml
src/: .todo  cli.py  config.py  logger.py  my_logging.py  utils.py
tests/: test_config.py
